2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Get rid of `trealloc'.

	* rcsedit.c (insertline): Use `testrealloc' directly.
	* rcsfnms.c (bufrealloc): Likewise.
	* base.h (trealloc): Delete macro.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Get rid of `tnalloc'.

	* rcsedit.c (insertline): Use `testalloc' directly.
	* rcsfnms.c (bufalloc): Likewise.
	* rcslex.c (fd2_RILE): Likewise.
	* base.h (talloc): Likewise.
	(tnalloc): Delete macro.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for rcsdiff `diffvstr' construction.

	* rcsdiff.c: #include "b-divvy.h".
	(main): Use `shared' space for `diffvstr' construction.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `single' space for log message handling.

	* rcslex.c (savestring): Don't write to `target';
	use `single' space instead.
	* rcsgen.c (cleanlogmsg): Take first arg as `const'.
	(scandeltatext): Update calls to `savestring', `cleanlogmsg'.
	* rcs.c (scanlogtext): Likewise.
	* rcssyn.c (Commleader): Delete now-unused `struct buf'.
	(getadmin): Update calls to `savestring'.
	* rlog.c (readdeltalog): Likewise.
	* base.h (cleanlogmsg, savestring): Update func decls.
	(manifestation): Delete now-unused member `log'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `pointer_array' more.

	* rcsutil.c (getRCSINIT): Use `pointer_array'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for `co -j' parsing.

	* co.c: #include "b-divvy.h".
	(joinlength): Delete var.
	(link, jstuff): New structs.
	(jstuff): New static `struct jstuff'.
	(jpush): New func.
	(addjoin): Use `jpush'.
	(preparejoin): Likewise.  Rework `joinlist' init.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for `merge' arg normalization.

	* merger.c: #include "b-divvy.h".
	(normalize_arg): Rewrite.
	(merge): Update call to `normalize_arg'; don't `tfree'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
